adding contact form & formspree integration

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1758,7 +1758,8 @@ input, select, textarea {
 		input[type="reset"].alt,
 		button.alt,
 		.button.alt {
-			background-color: #444;
+			color: #fff !important;
+			background-color: #555;
 			box-shadow: inset 0px 0px 0px 1px #242424, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.2);
 		}
 
