making buttons a little better

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1692,10 +1692,11 @@ input, select, textarea {
 		overflow: hidden;
 		box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.5), inset 0px 1px 1px 0px rgba(255, 255, 255, 0.75);
 		background-color: #fdfefe;
-		padding: 0.7em 2.0em 0em 2.0em;
+		padding: 0em 2.0em 0em 2.0em;
 		font-size: 1em;
 		max-width: 24em;
 		height: 50px;
+		line-height: 50px;
 	}
 
 
@@ -1719,6 +1720,28 @@ input, select, textarea {
 		width: 200px;
 	}
 
+	.button3 {
+		/* -moz-transition: top .2s ease-in-out;
+		-webkit-transition: top .2s ease-in-out;
+		-ms-transition: top .2s ease-in-out;
+		transition: top .2s ease-in-out; */
+		background-color: #fdfefe;
+		border-radius: 6px;
+		box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
+		color: #2E2E2E !important;
+		display: block;
+		font-size: 14px;
+		height: 40px;
+		line-height: 40px;
+		text-align: center;
+		outline: 0;
+		overflow: hidden;
+		text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.1);
+		width: 140px;
+		text-decoration: none;
+		font-weight: 700;
+	}
+
 		input[type="button"]:hover,
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
@@ -1734,6 +1757,13 @@ input, select, textarea {
 			/* background-color: inherit; */
 			/* background-color: #43bff0; */
 			color: #2E2E2E !important;
+		}
+
+		.button3:hover {
+			/* background-color: inherit; */
+			/* background-color: #43bff0; */
+			color: #2E2E2E !important;
+			top: -5px;
 		}
 
 		input[type="button"]:active,
