--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1694,7 +1694,8 @@ input, select, textarea {
 		background-color: #fdfefe;
 		padding: 0em 2.0em 0em 2.0em;
 		font-size: 1em;
-		max-width: 24em;
+		max-width: 200px;
+		/* width: 130px; */
 		height: 50px;
 		line-height: 50px;
 	}
@@ -2416,7 +2417,7 @@ input, select, textarea {
 				text-align: center;
 				font-size: 1.2em;
 				width: 100%;
-				padding: 1em 0 1em 0;
+				/* padding: 1em 0 1em 0; */
 
 			}
 
